--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=chocolotl
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.92.6+1.20.1
+emi_version=1.1.22+1.20.1
